End of Section 7

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "request": "attach",
       "platform": "netCore",
       "sourceFileMap": {
-          "/": "${workspaceFolder}"
+          "/app": "${workspaceFolder}"
       }
   },
       {
@@ -20,9 +20,9 @@
           "request": "launch",
           "preLaunchTask": "build",
           // If you have changed target frameworks, make sure to update the program path.
-          "program": "${workspaceFolder}/src/AuctionService/bin/Debug/net8.0/AuctionService.dll",
+          "program": "${workspaceFolder}/src/IdentityService/bin/Debug/net8.0/IdentityService.dll",
           "args": [],
-          "cwd": "${workspaceFolder}/src/AuctionService",
+          "cwd": "${workspaceFolder}/src/IdentityService",
           "stopAtEntry": false,
           // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
           "serverReadyAction": {
