--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,20 @@ services:
       context: .
       dockerfile: src/IdentityService/dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identity
     ports:
       - 5001:80
     depends_on:
       - postgres
+  gateway-svc:
+    image: kinznzl/gateway-svc:latest
+    build: 
+      context: .
+      dockerfile: src/GatewayService/dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - 6001:80
