--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite-react": "^0.10.1",
     "next": "14.2.9",
     "react": "^18",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "undici": "^6.19.8",
     "web-app": "file:"
   },
   "devDependencies": {
