--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -14,7 +14,10 @@
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-countdown": "^2.3.6",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "undici": "^6.19.8",
     "web-app": "file:"
