--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -12,6 +12,8 @@
     "flowbite-react": "^0.10.1",
     "next": "14.2.9",
     "next-auth": "^5.0.0-beta.20",
+    "openssl": "^2.0.0",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-datepicker": "^7.3.0",
@@ -20,7 +22,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "undici": "^6.19.8",
-    "web-app": "file:"
+    "web-app": "file:",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
